# A-kunpiloto

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/A_kunpiloto/: __init__.py  _display.py  _spinner.py  cli.py  commands.py  config.default.toml  config.py  history.py  mcp.py  repl.py  result_store.py  session.py  session_store.py  system_prompt.md
src/A_kunpiloto/tools/: __init__.py  _base.py  executor.py  file_tools.py  registry.py  safety.py
tests/: conftest.py  test_commands.py  test_config.py  test_display.py  test_executor.py  test_file_tools.py  test_history.py  test_registry.py  test_repl.py  test_result_store.py  test_safety.py  test_session_store.py  test_tool_names.py
